# FassOnIot

FassOnIotMain/: .gitignore  .gitmodules  README.md
FassOnIotMain/core/: README.md  build_core.sh  deploy_core.sh
FassOnIotMain/core/api_server/: README.md  docker-compose.yml  init_db.sql  pom.xml
FassOnIotMain/core/cli/: README.md
FassOnIotMain/core/cli/fit/: go.mod  main.go
FassOnIotMain/core/cli/fit/cmd/: create.go  get.go  root.go
FassOnIotMain/core/data_xchange/: CMakeLists.txt  Doxyfile  GPATH  GRTAGS  GTAGS  README.md  main.cpp
FassOnIotMain/core/data_xchange/Example/: pub_sub_example.cpp  pub_sub_example.h
FassOnIotMain/core/data_xchange/Messenger/: Messenger.cpp  Messenger.h
FassOnIotMain/core/data_xchange/Permissions/: PermissionFileParser.cpp  PermissionFileParser.h  PermissionMap.cpp  PermissionMap.h  pub_sub_perm_list
FassOnIotMain/core/data_xchange/Publishers/: Publisher.cpp  Publisher.h  Publishers.cpp  Publishers.h
FassOnIotMain/core/data_xchange/PythonWrapper/: PosixMessageQueueWrapper.cpp  PosixMessageQueueWrapper.h  PythonBindings.cpp  test.py
FassOnIotMain/core/data_xchange/Server/: Server.cpp  Server.h
FassOnIotMain/core/data_xchange/Server/Request/: Request.cpp  Request.h
FassOnIotMain/core/data_xchange/Subscribers/: Subscriber.cpp  Subscriber.h  Subscribers.cpp  Subscribers.h
FassOnIotMain/core/data_xchange/Topic/: Topic.cpp  Topic.h
FassOnIotMain/core/data_xchange/UserApplication/: UserApplication.cpp  UserApplication.h
FassOnIotMain/core/data_xchange/messages/: pub_sub_messages.pb.cc  pub_sub_messages.pb.h  pub_sub_messages.proto
FassOnIotMain/core/deployment_engine/: README.md  database_connection.py  database_connection_test.py  database_manager.py  databse_models.py  deployer.py  deployer_main.py  package_deploymentEngine.py  permission_manager.py  requirements.txt  start_deployment_engine.sh
FassOnIotMain/core/deployment_engine/demo_app_1/: user_config.json
FassOnIotMain/core/deployment_engine/demo_app_1/demo_code/: client.py
FassOnIotMain/core/deployment_engine/demo_app_2/: requirements.txt  user_config.json
FassOnIotMain/core/ui/: app.js  package-lock.json  package.json
FassOnIotMain/core/ui/html/: index.html
FassOnIotMain/core/ui/js/: upload.js
FassOnIotMain/master/: README.md
(+15 files in other folders)
